implemented updates outlined in email from David Glass on Janes UKCI2024 email thread

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                                        <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                                         <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                                         <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                                     </ul>
@@ -122,7 +122,7 @@
                                         <span class="custom-bullet"></span>Prof. Huiru (Jane) Zheng, Ulster
                                         University<br>
                                         <span class="custom-bullet"></span> Dr. Jun Liu, Ulster University<br>
-                                        <span class="custom-bullet"></span> Prof. Maurice Mulvane, Ulster University<br>
+                                        <span class="custom-bullet"></span> Prof. Maurice Mulvenna, Ulster University<br>
                                         <span class="custom-bullet"></span> Dr. David Glass, Ulster University<br>
                                         <span class="custom-bullet"></span> Prof. Hui Wang, Queen's University
                                         Belfast<br>
@@ -242,7 +242,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                            <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                             <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                             <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                         </ul>
