--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                                        <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                                         <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                                         <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                                     </ul>
@@ -111,7 +111,7 @@
                     <div class="card-body callforpaperbody">
                         <p>We are pleased to invite you to submit your original contributions to the 23rd Annual UK
                             Workshop on
-                            Computational Intelligence, UKCI 2024, which will take place at Belfast, Ulster University,
+                            Computational Intelligence, UKCI 2024, which will take place at Ulster University, Belfast,
                             UK, on
                             4th - 6th September 2024.</p>
                         <p>UKCI is the premier UK event for presenting leading research on all aspects of Computational
@@ -129,9 +129,7 @@
                     <div class="card-body callforpaperbody">
                         <p> As a research field, CI attracts a large number of scientists, engineers and practitioners
                             working
-                            primarily in the areas of Neural Networks, Fuzzy Systems and Evolutionary Computation. UKCI
-                            2024
-                            will take place at Belfast, Ulster University. </p>
+                            primarily in the areas of Neural Networks, Fuzzy Systems and Evolutionary Computation. </p>
                         <p>All submissions will be peer-reviewed. In earlier iterations of UKCI, accepted papers have
                             been
                             included in post-conference volumes, such as in the Springer book series Advances in
@@ -259,7 +257,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                            <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                             <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                             <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                         </ul>
