--- a/registration.html
+++ b/registration.html
@@ -48,7 +48,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                                        <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                                         <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                                         <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                                     </ul>
@@ -111,7 +111,7 @@
                         </p>
                         <p> All accepted papers must be registered with either a regular or student registration prior
                             to
-                            the submission of the camera-ready version. The registration includes attendance in all
+                            the submission of the camera-ready version. The registration includes attendance at all
                             technical sessions, and access to proceedings.<br>
                             Please note:
                             <li>Student Registration - covers <strong>only one</strong> paper.</li>
@@ -155,7 +155,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                            <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                             <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                             <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                         </ul>
