--- a/venue.html
+++ b/venue.html
@@ -48,7 +48,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                                        <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                                         <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                                         <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                                     </ul>
@@ -85,7 +85,7 @@
             <div class="col-sm-12 col-lg-12">
                 <div class="card">
                     <div class="card-body address">
-                        <p>The 2024 UKCI Conference will take place in the Corner Lecture Theatre of the BA Building at
+                        <p>The 2024 UKCI Conference will take place in the Conor Lecture Theatre of the BA Building at
                             Ulster University, in Belfast, Northern Ireland, between 4th - 6th September 2024. <br>
                             <strong>Address:</strong> York St, Belfast BT15 1ED
                         </p>
@@ -96,9 +96,9 @@
                 <div class="card">
                     <div class="card-body safebelfastbody">
                         <p>Belfast is a safe and walkable city with all major city centre hotels within 5-10 minutes
-                            walking distance from the city centre, ICC Belfast, venues and attractions. From
+                            walking distance from the city centre. From
                             international brands to famous locally owned hotels, our range of hotels offer spacious
-                            bedrooms and the famous Belfast welcome ready delegates.
+                            bedrooms and the famous Belfast welcome awaits delegates.
                         </p>
                     </div>
                 </div>
@@ -209,6 +209,22 @@
         </div>
         <br>
         <br>
+        <h2>Useful Links</h2>
+        <hr>
+        <br>
+        <div class="row gy-3">
+            <div class="col-sm-12 col-lg-12">
+                <div class="card">
+                    <div class="card-body travelbody">
+                        <h6 class="keydate"> <strong>City Airport:</strong> https://www.belfastcityairport.com </h6>
+                        <h6 class="keydate"> <strong>International Airport:</strong> https://www.belfastairport.com </h6>
+                        <h6 class="keydate"> <strong>Public Transport:</strong> https://www.translink.co.uk </h6>
+                        <h6 class="keydate"> <strong>University:</strong> https://www.ulster.ac.uk </h6>
+                        <h6 class="keydate"> <strong>Attractions:</strong> https://visitbelfast.com </h6>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="footer" class="container-fluid">
@@ -242,7 +258,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                            <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                             <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                             <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                         </ul>
