--- a/belfast.html
+++ b/belfast.html
@@ -48,7 +48,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                                        <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                                        <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                                         <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                                         <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                                     </ul>
@@ -114,7 +114,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./venue.html">Venue</a></li>
-                            <li><a class="dropdown-item" href="./venue.html">Accomodation</a></li>
+                            <li><a class="dropdown-item" href="./venue.html">Accommodation</a></li>
                             <li><a class="dropdown-item" href="./venue.html">Travel</a></li>
                             <li><a class="dropdown-item" href="./belfast.html">Map of Belfast</a></li>
                         </ul>
