--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                     <div class="card-body keyinfobody">
                         <h6 class="keydate"><strong>UKCI:</strong> Belfast, Northern Ireland, 4th - 6th September 2024
                         </h6>
-                        <h6 class="keydate"><strong>Registration Opens:</strong> 20th May 2024</h6>
-                        <h6 class="keydate"><strong>Paper Submission Deadline:</strong> 9th June 2024</h6>
+                        <h6 class="keydate"><strong>Registration Opening Soon</strong></h6>
+                        <h6 class="keydate"><strong>Paper Submission Deadline:</strong> 26th May 2024</h6>
                         <h6 class="keydate"><strong>Acceptance Notification:</strong> 14th July 2024</h6>
-                        <h6 class="keydate"><strong>Camera Ready Submission Deadline:</strong> 4th August 2024</h6>
+                        <h6 class="keydate"><strong>Camera Ready Submission Deadline:</strong> 28th July 2024</h6>
                     </div>
                 </div>
             </div>
