updated references to dates throughout site which conflicted after Janes updates to key dates

--- a/registration.html
+++ b/registration.html
@@ -102,7 +102,7 @@
                 <div class="card">
                     <div class="card-body registrationbody">
                         <p>You can register for UKCI 2024 through Ulster University's Online Store when registration
-                            opens on <strong>20th May 2024 </strong>.<br><br>
+                            opens <strong>(opening soon)</strong>.<br><br>
                             We are planning for an in-person conference. However, we may be able to accommodate online
                             participation under exceptional circumstances for those who are not able to travel (in
                             particular from overseas). We will publish relevant guidance on the website in due course.
