--- a/submissions.html
+++ b/submissions.html
@@ -85,8 +85,8 @@
             <div class="col-sm-12 col-lg-12">
                 <div class="card">
                     <div class="card-body registrationbody">
-                        <p>The UKCI Conference 2024 Submission Portal will be available once registration opens on
-                            <strong>20th May 2024</strong></p>
+                        <p>The UKCI Conference 2024 Submission Portal will be available once registration opens
+                            <strong>(opening soon)</strong></p>
                     </div>
                 </div>
             </div>
