added BELIEF 2024 Conference link for Yaxin

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         </div>
         <br>
         <br>
+        <p id="belief2024link">UKCI 2024 is collocated with the 8th International Conference on Belief Functions <a href="https://www.bfasociety.org/Belief2024/index.html"> (BELIEF 2024) </a></p>
         <h2 id="callforpapertitle">Call for Papers</h2>
         <hr>
         <br>
