UKCI UU logo switch around and subnavbar UCKI Conference label changed to UK Comp Sci Workshop

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <p id="ukcilogo">UKCI /
+                            <p id="ukcilogo">
                                 <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                                UKCI 2024
                             </p>
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -102,7 +103,7 @@
         </div>
         <br>
         <br>
-        <p id="belief2024link">UKCI 2024 is collocated with the 8th International Conference on Belief Functions <a href="https://www.bfasociety.org/Belief2024/index.html"> (BELIEF 2024) </a></p>
+        <p id="belief2024link">UKCI 2024 is collocated with the 8th International Conference on Belief Functions <a href="https://www.bfasociety.org/Belief2024/index.html" target="blank"> (BELIEF 2024) </a></p>
         <h2 id="callforpapertitle">Call for Papers</h2>
         <hr>
         <br>
