--- a/about.html
+++ b/about.html
@@ -25,8 +25,9 @@
                 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <p id="ukcilogo">UKCI /
+                            <p id="ukcilogo">
                                 <img id="uulogo" src="./images/UUWhite.png" alt="Ulster University">
+                                UKCI 2024
                             </p>
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -70,7 +71,7 @@
                 <div id="subnavbar" class="container-fluid text-center">
                     <div class="row align-items-start justify-content-center">
                         <div class="subnavlink col-lg-4 col-sm-12">
-                            UKCI Conference 2024
+                            UK Computational Intelligence Workshop 2024
                         </div>
                         <div class="subnavlink col-lg-4 col-sm-12">
                             4th - 6th September
