Added new submission portal link and send zip to Jane, website nearly done I think

--- a/website/index.html
+++ b/website/index.html
@@ -80,9 +80,13 @@
             <div class="col-sm-12 col-lg-6">
                 <div class="card">
                     <div class="card-body keyinfobody">
-                        <h6 class="keydate"><strong>UKCI:</strong> Belfast, Northern Ireland, 4th - 6th September 2024
+                        <h6 class="keydate"><strong><a
+                                    href="https://cmt3.research.microsoft.com/UKCI2024/Submission/Index"
+                                    target="_blank"> Submission Portal </a></strong> </h6>
+                        <h6 class="keydate"><strong>Location:</strong> Ulster University, Belfast, Northern Ireland
                         </h6>
-                        <h6 class="keydate"><strong><a href="https://store.ulster.ac.uk/product-catalogue/faculty-of-computing-engineering-and-the-built-environment/school-of-computing/ukci2024-conference-registration-fee" target="_blank"> Registration Open Now </a></strong></h6>
+                        <h6 class="keydate"><strong>Date:</strong> 4th - 6th September 2024
+                        </h6>
                         <h6 class="keydate"><strong>Paper Submission Deadline:</strong> 9th June 2024</h6>
                         <h6 class="keydate"><strong>Acceptance Notification:</strong> 14th July 2024</h6>
                         <h6 class="keydate"><strong>Camera Ready Submission Deadline:</strong> 4th August 2024</h6>
@@ -92,6 +96,9 @@
             <div class="col-sm-12 col-lg-6">
                 <div class="card">
                     <div class="card-body keyinfobody">
+                        <h6 class="keydate"><strong><a
+                                    href="https://store.ulster.ac.uk/product-catalogue/faculty-of-computing-engineering-and-the-built-environment/school-of-computing/ukci2024-conference-registration-fee"
+                                    target="_blank"> Registration Portal </a></strong></h6>
                         <h6 class="keydate"><strong>Early Bird Registration Open Until:</strong> 22nd July 2024</h6>
                         <h6 class="keydate"><strong>Early Bird Registration: </strong>£325</h6>
                         <h6 class="keydate"><strong>Regular Registration: </strong>£375</h6>
@@ -103,7 +110,8 @@
         </div>
         <br>
         <br>
-        <p id="belief2024link">UKCI 2024 is collocated with the 8th International Conference on Belief Functions <a href="https://www.bfasociety.org/Belief2024/index.html" target="blank"> (BELIEF 2024) </a></p>
+        <p id="belief2024link">UKCI 2024 is collocated with the 8th International Conference on Belief Functions <a
+                href="https://www.bfasociety.org/Belief2024/index.html" target="blank"> (BELIEF 2024) </a></p>
         <h2 id="callforpapertitle">Call for Papers</h2>
         <hr>
         <br>
@@ -253,8 +261,8 @@
                         <a class="nav-link" href="./programme.html">Programme</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="./venue.html" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="./venue.html" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             Logistics
                         </a>
                         <ul class="dropdown-menu">
