--- a/website/programme.html
+++ b/website/programme.html
@@ -86,7 +86,7 @@
             <div class="col-sm-12 col-lg-12">
                 <div class="card">
                     <div class="card-body registrationbody">
-                        <p>The UKCI Conference 2024 Programme will be annonunced after the Camera Ready Submission
+                        <p>The UKCI Workshop 2024 Programme will be annonunced after the Camera Ready Submission
                             Deadline on <strong> 4th August 2024 </strong></p>
                     </div>
                 </div>
