--- a/website/submissions.html
+++ b/website/submissions.html
@@ -86,6 +86,9 @@
             <div class="col-sm-12 col-lg-12">
                 <div class="card">
                     <div class="card-body subinfobody">
+                        <h6 class="keydate"><strong><a
+                                    href="https://cmt3.research.microsoft.com/UKCI2024/Submission/Index"
+                                    target="_blank"> Submission Portal </a></strong> </h6>
                         <h6 class="keydate"><strong>Paper Submission Deadline:</strong> 9th June 2024</h6>
                         <h6 class="keydate"><strong>Acceptance Notification:</strong> 14th July 2024</h6>
                         <h6 class="keydate"><strong>Camera Ready Submission Deadline:</strong> 4th August 2024</h6>
@@ -94,19 +97,41 @@
             </div>
             <br>
             <br>
-            <h2>Submissions (TBC)</h2>
+
+            <br>
+            <h2 id="topicsofinteresttitle">Topics of Interest</h2>
             <hr>
             <br>
-            <div class="col-sm-12 col-lg-12">
-                <div class="card">
-                    <div class="card-body registrationbody">
-                        <p>The UKCI Conference 2024 Submission Portal will be available on:
-                            <strong>(TBC)</strong>
-                        </p>
-                    </div>
-                </div>
+            <div class="col-sm-12">
+                <ul class="list-group list-group-horizontal list-group-flush">
+                    <li class="list-group-item topicofinterest">Topics of Interest include but are not limited to:</li>
+                </ul>
+                <br>
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item topicofinterest">Machine Learning</li>
+                    <li class="list-group-item topicofinterest">Neural Networks</li>
+                    <li class="list-group-item topicofinterest">Evolutionary Computation</li>
+                </ul>
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item topicofinterest">Fuzzy Systems</li>
+                    <li class="list-group-item topicofinterest">Data Mining</li>
+                    <li class="list-group-item topicofinterest">Evolving Systems</li>
+                </ul>
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item topicofinterest">Hybrid Methods</li>
+                    <li class="list-group-item topicofinterest">Intelligent Robotics</li>
+                    <li class="list-group-item topicofinterest">Cognitive Computing</li>
+                </ul>
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item topicofinterest">Deep Learning</li>
+                    <li class="list-group-item topicofinterest">Applications of Computational Intelligence</li>
+                    <li class="list-group-item topicofinterest">Artificial Intelligence</li>
+                </ul>
+
             </div>
         </div>
+        <br>
+    </div>
     </div>
 
     <div id="footer" class="container-fluid">
