added AIRC links and logo Jane asked for via email

--- a/website/index.html
+++ b/website/index.html
@@ -109,9 +109,14 @@
             </div>
         </div>
         <br>
+        <h2 id="callforpapertitle">Collaborators</h2>
+        <hr>
         <br>
-        <p id="belief2024link">UKCI 2024 is collocated with the 8th International Conference on Belief Functions <a
-                href="https://www.bfasociety.org/Belief2024/index.html" target="blank"> (BELIEF 2024) </a></p>
+        <a class="navbar-brand" href="./index.html">
+            <img id="aircbanner" src="./images/AIRC.jpeg" alt="AIRC">
+        </a>
+        <p id="belief2024link">UKCI 2024 is organised by the <a href="https://www.ulster.ac.uk/research/topic/computer-science/artificial-intelligence">Artificial Intelligence Research Centre</a> at the <a href="https://www.ulster.ac.uk/faculties/computing-engineering-and-the-built-environment/computing">Ulster University School of Computing</a>. <br> It is supported by the <a href="https://www.ieee-ukandireland.org/chapters/systems-man-cybernetics-ireland/">IEEE UK & Ireland Section Systems, Man, and Cybernetics Ireland Chapter</a> and collocated with the <a
+            href="https://www.bfasociety.org/Belief2024/index.html" target="blank"> 8th International Conference on Belief Functions</a>.</p>
         <h2 id="callforpapertitle">Call for Papers</h2>
         <hr>
         <br>
@@ -244,6 +249,10 @@
                 <br>
                 <a class="navbar-brand" href="./index.html">
                     <img id="uulogof" src="./images/UUWhite.png" alt="Ulster University">
+                </a>
+                <br>
+                <a class="navbar-brand" href="./index.html">
+                    <img id="airclogo" src="./images/AIRC.jpeg" alt="AIRC">
                 </a>
             </div>
             <div class="col-sm-12 col-lg-6">
