--- a/website/venue.html
+++ b/website/venue.html
@@ -237,6 +237,10 @@
                 <a class="navbar-brand" href="./index.html">
                     <img id="footeruulogo" src="./images/UUWhite.png" alt="Ulster University">
                 </a>
+                <br>
+                <a class="navbar-brand" href="./index.html">
+                    <img id="airclogo" src="./images/AIRC.jpeg" alt="AIRC">
+                </a>
             </div>
             <div class="col-sm-12 col-lg-6">
                 <ul class="navbar-nav ms-auto">
