--- a/website/index.html
+++ b/website/index.html
@@ -115,7 +115,7 @@
         <a class="navbar-brand" href="./index.html">
             <img id="aircbanner" src="./images/AIRC.jpeg" alt="AIRC">
         </a>
-        <p id="belief2024link">UKCI 2024 is organised by the <a href="https://www.ulster.ac.uk/research/topic/computer-science/artificial-intelligence">Artificial Intelligence Research Centre</a> at the <a href="https://www.ulster.ac.uk/faculties/computing-engineering-and-the-built-environment/computing">Ulster University School of Computing</a>. <br> It is supported by the <a href="https://www.ieee-ukandireland.org/chapters/systems-man-cybernetics-ireland/">IEEE UK & Ireland Section Systems, Man, and Cybernetics Ireland Chapter</a> and collocated with the <a
+        <p id="belief2024link">UKCI 2024 is organised by the <a href="https://www.ulster.ac.uk/research/topic/computer-science/artificial-intelligence" target="blank">Artificial Intelligence Research Centre</a> at the <a href="https://www.ulster.ac.uk/faculties/computing-engineering-and-the-built-environment/computing" target="blank">Ulster University School of Computing</a>. <br> It is supported by the <a href="https://www.ieee-ukandireland.org/chapters/systems-man-cybernetics-ireland/" target="blank">IEEE UK & Ireland Section Systems, Man, and Cybernetics Ireland Chapter</a> and collocated with the <a
             href="https://www.bfasociety.org/Belief2024/index.html" target="blank"> 8th International Conference on Belief Functions</a>.</p>
         <h2 id="callforpapertitle">Call for Papers</h2>
         <hr>
