--- a/website/index.html
+++ b/website/index.html
@@ -109,14 +109,6 @@
             </div>
         </div>
         <br>
-        <h2 id="callforpapertitle">Collaborators</h2>
-        <hr>
-        <br>
-        <a class="navbar-brand" href="./index.html">
-            <img id="aircbanner" src="./images/AIRC.jpeg" alt="AIRC">
-        </a>
-        <p id="belief2024link">UKCI 2024 is organised by the <a href="https://www.ulster.ac.uk/research/topic/computer-science/artificial-intelligence" target="blank">Artificial Intelligence Research Centre</a> at the <a href="https://www.ulster.ac.uk/faculties/computing-engineering-and-the-built-environment/computing" target="blank">Ulster University School of Computing</a>. <br> It is supported by the <a href="https://www.ieee-ukandireland.org/chapters/systems-man-cybernetics-ireland/" target="blank">IEEE UK & Ireland Section Systems, Man, and Cybernetics Ireland Chapter</a> and collocated with the <a
-            href="https://www.bfasociety.org/Belief2024/index.html" target="blank"> 8th International Conference on Belief Functions</a>.</p>
         <h2 id="callforpapertitle">Call for Papers</h2>
         <hr>
         <br>
@@ -192,6 +184,19 @@
     <br>
     <hr>
     <br>
+    <h2 id="callforpapertitle">Sponsors</h2>
+        <hr>
+        <br>
+        <div class="sponsorLogoBanner">
+            <a class="navbar-brand" href="https://www.ulster.ac.uk/research/topic/computer-science/artificial-intelligence" target="_blank">
+                <img class="sponsorLogo" src="./images/AIRC.jpeg" alt="AIRC">
+            </a>
+            <a class="navbar-brand" href="https://www.ieee-ukandireland.org/chapters/systems-man-and-cybernetics/" target="_blank">
+                <img class="sponsorLogo" src="./images/IEEESMC.jpg" alt="AIRC">
+            </a>
+        </div>
+        <p id="belief2024link">UKCI 2024 is organised by the <a href="https://www.ulster.ac.uk/research/topic/computer-science/artificial-intelligence" target="blank">Artificial Intelligence Research Centre</a> at the <a href="https://www.ulster.ac.uk/faculties/computing-engineering-and-the-built-environment/computing" target="blank">Ulster University School of Computing</a>. <br> It is supported by the <a href="https://www.ieee-ukandireland.org/chapters/systems-man-and-cybernetics/" target="blank">IEEE UK & Ireland Section Systems, Man, and Cybernetics Ireland Chapter</a> and collocated with the <a
+            href="https://www.bfasociety.org/Belief2024/index.html" target="blank"> 8th International Conference on Belief Functions</a>.</p>
     <div class="col-sm-12 col-lg-12">
         <div class="card">
             <div class="card-body registrationbody">
@@ -249,10 +254,6 @@
                 <br>
                 <a class="navbar-brand" href="./index.html">
                     <img id="uulogof" src="./images/UUWhite.png" alt="Ulster University">
-                </a>
-                <br>
-                <a class="navbar-brand" href="./index.html">
-                    <img id="airclogo" src="./images/AIRC.jpeg" alt="AIRC">
                 </a>
             </div>
             <div class="col-sm-12 col-lg-6">
