updated the conference starting dates in each page from 4-6 to 2-4

--- a/website/about.html
+++ b/website/about.html
@@ -115,7 +115,7 @@
                 UK Computational Intelligence Workshop 2024
               </div>
               <div class="subnavlink col-lg-4 col-sm-12">
-                4th - 6th September
+                2nd - 4th September
               </div>
               <div class="subnavlink col-lg-4 col-sm-12">
                 Ulster University, Belfast, Northern Ireland
