--- a/website/index.html
+++ b/website/index.html
@@ -85,7 +85,7 @@
                                     target="_blank"> Submission Portal </a></strong> </h6>
                         <h6 class="keydate"><strong>Location:</strong> Ulster University, Belfast, Northern Ireland
                         </h6>
-                        <h6 class="keydate"><strong>Date:</strong> 4th - 6th September 2024
+                        <h6 class="keydate"><strong>Date:</strong> 2nd - 4th September 2024
                         </h6>
                         <h6 class="keydate"><strong>Paper Submission Deadline:</strong> 9th June 2024</h6>
                         <h6 class="keydate"><strong>Acceptance Notification:</strong> 14th July 2024</h6>
@@ -120,7 +120,7 @@
                             Workshop on
                             Computational Intelligence, UKCI 2024, which will take place at Ulster University, Belfast,
                             UK, on
-                            4th - 6th September 2024.</p>
+                            2nd - 4th September 2024.</p>
                         <p>UKCI is the premier UK event for presenting leading research on all aspects of Computational
                             Intelligence. The aim of this event is to provide a forum for the academic community and
                             industry to
