--- a/website/venue.html
+++ b/website/venue.html
@@ -67,7 +67,7 @@
                             UK Computational Intelligence Workshop 2024
                         </div>
                         <div class="subnavlink col-lg-4 col-sm-12">
-                            4th - 6th September
+                            2nd - 4th September
                         </div>
                         <div class="subnavlink col-lg-4 col-sm-12">
                             Ulster University, Belfast, Northern Ireland
@@ -87,7 +87,7 @@
                 <div class="card">
                     <div class="card-body address">
                         <p>The 2024 UKCI Conference will take place in the Conor Lecture Theatre of the BA Building at
-                            Ulster University, in Belfast, Northern Ireland, between 4th - 6th September 2024. <br>
+                            Ulster University, in Belfast, Northern Ireland, between 2nd - 4th September 2024. <br>
                             <strong>Address:</strong> York St, Belfast BT15 1ED
                         </p>
                     </div>
